@@ -594,3 +594,4 @@ FIXED: Prevent the modifier remapping from accessing out-of-range rooms.
 FIXED: Don't show the mirror image if the prince is not in the currently shown room.
 DONE: Added a new cheat key: Ctrl+B: Go back to the room where the prince is. (Undo H,J,U,N.)
 FIXED: Fixed the length of feather fall in fast-forward mode.
+FIXED: Prevent torches from being randomly colored when an older replay is loaded.
